--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
                 <input type="text" id="handInput" maxlength="3" placeholder="e.g., 98s">
             </div>
             <div>
-                <p id="result"></p>
+                <p id="search-result"></p>
             </div>
         </div>
     </div>
